cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(cgp_or)
find_package(PCL 1.2 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable (cgp_or correspondence_grouping.cpp test_cg.cpp)
target_link_libraries (cgp_or ${PCL_LIBRARIES})
